<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/numbers"
        style="@style/CategoryStyle"
        android:background="@color/category_numbers"
        android:onClick="openNumberList"
        android:text="@string/category_numbers" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/family"
        style="@style/CategoryStyle"
        android:background="@color/category_family"
        android:onClick="openFamilyMembers"
        android:text="@string/category_family" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/colors"
        style="@style/CategoryStyle"
        android:background="@color/category_colors"
        android:onClick="openColor"
        android:text="@string/category_colors" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/phrases"
        style="@style/CategoryStyle"
        android:background="@color/category_phrases"
        android:onClick="openPhrases"
        android:text="@string/category_phrases" />

</LinearLayout>
